# Monopoly

./: CMakeLists.txt  main.cpp
Controller/: BoardController.cpp  BoardController.h  Initialize.cpp  Initialize.h
Core/: CircularList.cpp  CircularList.h  List.cpp  List.h  Node.cpp  Node.h  Nodo.cpp  Nodo.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h
Models/: Free.cpp  Free.h  Item.cpp  Item.h  Jail.cpp  Jail.h  Player.cpp  Player.h  Property.cpp  Property.h  SpecialCard.cpp  SpecialCard.h  Spot.cpp  Spot.h  Tax.cpp  Tax.h  Token.cpp  Token.h
Models/Enums/: Color.h  PropertyTypes.h  SpecialCardAction.h  SpecialCardType.h  SpotType.h
